[package]
name = "main"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
bytes = "1"
http-body-util = "0.1"
envfury = "0.2"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
color-eyre = "0.6"
